@@ -1,22 +1,3 @@
 // +build !integration
 
 package harvester
-
-import (
-	"testing"
-
-	"github.com/stretchr/testify/assert"
-)
-
-// Most harvester tests need real files to tes that can be modified. These tests are implemented with
-// system tests
-
-func TestExampleTest(t *testing.T) {
-
-	h := Harvester{
-		path:   "/var/log/",
-		offset: 0,
-	}
-
-	assert.Equal(t, "/var/log/", h.path)
-}
