@@ -31,6 +31,11 @@ func NewState(fileInfo os.FileInfo, path string) State {
 	}
 }
 
+// IsEmpty returns true if the state is empty
+func (s *State) IsEmpty() bool {
+	return *s == State{}
+}
+
 // States handles list of FileState
 type States struct {
 	states []State
@@ -60,11 +65,12 @@ func (s *States) Update(newState State) {
 	}
 }
 
-func (s *States) FindPrevious(newState State) (int, State) {
+func (s *States) FindPrevious(newState State) State {
 	// TODO: This currently blocks writing updates every time state is fetched. Should be improved for performance
 	s.mutex.Lock()
 	defer s.mutex.Unlock()
-	return s.findPrevious(newState)
+	_, state := s.findPrevious(newState)
+	return state
 }
 
 // findPreviousState returns the previous state fo the file
